2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (dh_base_init): Setup default values.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/Makefile.am:
	* src/ige-conf.h:
	* src/ige-conf-private.h:
	* src/ige-conf.c: New file with code to read the installed
	defaults file.

	* src/ige-conf-mac.m: Use the defaults from above here to setup
	defaults for NSUserDefaults.

	* src/ige-conf-gconf.c: Get the highest level dir from the
	defaults instead of hard coding it.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/Makefile.am: Disable deprecated APIs in GLib, GDK, and GTK+.

2008-10-10  Richard Hult  <richard@imendio.com>

	* data/devhelp.schemas.in: Restructure the non-preferences keys
	that are used for saving state so we can add more of those without
	making a mess.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.[ch]: Remove dh_search_grab_focus().
	* src/dh-window.c: Replace the use of the above with
	gtk_widget_grab_focus().

2008-10-10  Richard Hult  <richard@imendio.com>

	* data/devhelp.desktop.in.in: Remove Encoding field since
	desktop-file-validate complains about it, thanks to Enrico Tröger.
	Also remove the MimeType field as haven't supported opening
	devhelp files for a long time (have we ever?).

2008-10-10  Richard Hult  <richard@imendio.com>

	* data/Makefile.am: Install the schemas.in file so ige-conf can
	use it for defaults handling when using NSUserDefaults.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (dh_search_class_init, dh_search_grab_focus):
	Prepare to get rid of dh_search_grab_focus().

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c: (dh_assistant_init): Set window title.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.h: Undeprecate by s/GtkType/GType/.

2008-10-10  Richard Hult  <richard@imendio.com>

	* src/dh-search.c: (dh_search_new): Replace deprecated API.

2008-10-10  Richard Hult  <richard@imendio.com>
